# volcano-videocut-openclaw

./: .env.example  .gitignore  README.md  README_FRONTEND.md  architecture-presentation.html  architecture.html  big.md  flowchart.html  novel-03-flowchart.html  npc.md  openclaw-deploy.sh  openclaw-extra.json5  openclaw-setup-guide.md  package-lock.json  package.json  shanhe.md  sm.md  test_load.html
electron/: chat-progress-hints.js  gateway-client.js  main.js  preload.js  skills-manager.js
openclaw-studio/: package-lock.json  skills-flow-architecture.html
public/: index.html
scripts/: add_watermark.py  ai_narration.py  analyze_video.py  asr_extract.py  bgm_auto_match.py  bgm_mix.py  burn_subtitle.py  ffmpeg_cut.py  gen_cover.py  hook_narration_bridge.py  platform_export.py  remove_freeze_zoom.py  scene_detect.py  score_quality.py  seedance_client.py  seedance_extend.py  (+9 more)
skills/mv-production/scripts/: audio_base64.py  av_separation.py  convert_storyboard.py  download_audio.py  ffmpeg_exe.py  generate_reference_image.py  generate_srt.py  merge_audio.py  output_dir_utils.py  pyproject.toml  video_mv_generate.py  video_shot_generate.py  volcengine_transcribe.py
skills/video-redaction/: README.md  SKILL.md  pyproject.toml
skills/video-redaction/reference/: 合并.md  字幕处理.md  安装.md  敏感词检测.md  敏感词音频处理-脚本方案.md  敏感词音频处理.md  音频处理.md
skills/video-redaction/scripts/: asr_qwen.py  audio_base64.py  av_separation.py  generate_subtitles.py  merge_final.py  sensitive_audio_replace.py  setup.sh  volcengine_transcribe.py
skills/video-translation/scripts/base/: asr_qwen.py  av_separation.py  burn_subtitle.py  count_speed_profile.py  merge_audio_video.py  pyproject.toml  run_tts.py  video_asr_pipeline.py  voice_segment.py
(+462 files in other folders)
